// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Marker should render Marker 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#000000",
        "borderRadius": 20,
        "borderWidth": 4,
        "fontSize": 1,
        "height": 40,
        "justifyContent": "center",
        "position": "relative",
        "width": 40,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#000000",
          "fontWeight": "bold",
          "position": "relative",
          "zIndex": 1,
        }
      }
    >
      1
    </Text>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "borderRadius": 20,
          "height": 40,
          "position": "absolute",
          "transform": Array [
            Object {
              "scale": 0,
            },
          ],
          "width": 40,
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "flex": 1,
          "position": "relative",
          "width": 4,
          "zIndex": 0,
        },
        Object {
          "backgroundColor": "#a4a4a4",
        },
        false,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "height": "0%",
          "width": 4,
        }
      }
    />
  </View>
</View>
`;

exports[`Marker should render last Marker 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#000000",
        "borderRadius": 20,
        "borderWidth": 4,
        "fontSize": 1,
        "height": 40,
        "justifyContent": "center",
        "position": "relative",
        "width": 40,
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#000000",
          "fontWeight": "bold",
          "position": "relative",
          "zIndex": 1,
        }
      }
    >
      1
    </Text>
    <View
      style={
        Object {
          "backgroundColor": "#000000",
          "borderRadius": 20,
          "height": 40,
          "position": "absolute",
          "transform": Array [
            Object {
              "scale": 0,
            },
          ],
          "width": 40,
        }
      }
    />
  </View>
</View>
`;
